# Oath

./: .gitignore  0_DesignDoc_Code.md  0_DesignDoc_Oath.md  0_DesignDoc_TreeAutomata.md  README.md
Linen/: CMakeLists.txt  CodeGolf_Linen.cpp  CodeGolf_RPGSystems.cpp  Linen.md
Linen/Source/: CharacterStats.hpp  GameContext.cpp  GameContext.hpp  GameEvents.hpp  GameSystemManager.cpp  GameSystemManager.hpp  GameSystemPlugin.hpp  Inventory.hpp  TAController.cpp  TAController.hpp  TACore.cpp  TACore.hpp  WorldState.hpp
Linen/data/: crime_config.json  economy_config.json  health_config.json  weather_config.json
Oath/: CMakeLists.txt
Oath/DesignDocs/: Oath_RPGSystems.md
Oath/DesignDocs/Generators/: NPCGenerator.md
Oath/DesignDocs/MoveToJSON/: MoveToJSON.md
Oath/DesignDocs/Systems/: System_DiseaseHealth.md  System_EconomyMarket.md  System_FactionReputation.md  System_ReligionDeity.md
Oath/OldStructure/: CMakeLists.txt
Oath/OldStructure/Source/Public/: Oath_JSON.hpp  System_Mount_JSON.hpp  System_SpellCrafting_JSON.hpp
Oath/OldStructure/data/: FactionReputation.json  NPCRelationships.json  NPCs.json
Oath/Racials_Languages/: Lang_Grukk.md  Lang_Lord.md  Lang_Tiny.md  Lang_Wild.md  Racials.md  Translator_Grukk.py  Translator_Lord.py  Translator_Tiny.py  Translator_Wild.py  Translators.py  test_passage.txt
Oath/Racials_Languages/translated_stories/: test_passage_grukk.txt  test_passage_lord.txt  test_passage_tiny.txt  test_passage_wild.txt
Oath/oath/: _TODO_Main.md  new_main.cpp
Oath/oath/ai/: EmergentAI.cpp  EmergentAI.hpp  EmergentAI.json  EmergentAI.md  EmergentNPC.cpp  EmergentNPC.hpp  _TODO_AI.md
Oath/oath/core/: NodeID.cpp  NodeID.hpp  TAAction.hpp  TAController.hpp  TAInput.hpp  TANode.cpp  TANode.hpp
Oath/oath/data/: CharacterStats.hpp  GameContext.hpp  Item.hpp  Recipe.hpp
Oath/oath/resources/json/: Diseases.json  Economy.json  FactionReputation.json
Oath/oath/systems/crafting/: CraftingNode.cpp
Oath/oath/systems/crime/: BountyPaymentNode.cpp  BountyPaymentNode.hpp  CrimeLawConfig.cpp  CrimeLawContext.cpp  CrimeLawSystem.cpp  CrimeLawSystem.hpp  CrimeSystemNode.cpp  CrimeType.cpp  CriminalRecord.hpp  GuardEncounterNode.cpp  GuardResponseType.hpp  JailNode.cpp  JailNode.hpp  PickpocketNode.hpp  TheftNode.cpp  TheftNode.hpp  _TODO_CrimeLaw.md
Oath/oath/systems/dialogue/: DialogueNode.cpp  DialogueNode.hpp
Oath/oath/systems/economy/: BusinessInvestment.cpp  BusinessInvestment.hpp  EconomicEvent.cpp  EconomicEvent.hpp  EconomicSystemNode.cpp  EconomicSystemNode.hpp  InvestmentNode.cpp  InvestmentNode.hpp  Market.cpp  Market.hpp  MarketNode.cpp  MarketNode.hpp  MarketTypes.cpp  MarketTypes.hpp  Property.cpp  Property.hpp  PropertyNode.cpp  PropertyNode.hpp  PropertyTypes.cpp  PropertyTypes.hpp  TradeCommodity.cpp  TradeCommodity.hpp  TradeRoute.cpp  TradeRoute.hpp  _TODO_Economy.md
Oath/oath/systems/faction/: Faction.cpp  Faction.hpp  FactionDialogueNode.cpp  FactionDialogueNode.hpp  FactionLocationNode.cpp  FactionLocationNode.hpp  FactionQuestNode.cpp  FactionQuestNode.hpp  FactionRelationship.cpp  FactionRelationship.hpp  FactionSystemNode.cpp  FactionSystemNode.hpp  PoliticalEvent.cpp  PoliticalEvent.hpp  _TODO_Faction.md
Oath/oath/systems/health/: Disease.cpp  Disease.hpp  DiseaseManager.cpp  DiseaseManager.hpp  HealingMethod.cpp  HealingMethod.hpp  HealthContext.hpp  HealthNodes.cpp  HealthNodes.hpp  HealthSetup.cpp  HealthState.cpp  HealthState.hpp  Immunity.cpp  Immunity.hpp  NutritionNode.cpp  NutritionNode.hpp  NutritionState.cpp  NutritionState.hpp  Symptom.cpp  Symptom.hpp  TODO_DiseaseHealth.md
Oath/oath/utils/: JSONLoader.cpp  JSONLoader.hpp  JSONSerializer.hpp
RawOath/: AdvancedWeatherSystem.cpp  CMakeLists.txt  CrimeLawSystem copy 4.cpp  DiseaseHealthSystem.cpp  EconomyMarketSystem.cpp  FactionReputationSystem.cpp  MountSystem.cpp  NPCRelationshipSystem.cpp  Oath_RPGSystems.cpp  RawOath.md  RawOathFull.cpp  ReligionDeitySystem.cpp  SpellCraftingSystem.cpp  SpellCraftingSystem2.cpp
RawOath/DesignDocs/: AdvancedWeatherSystem.md  CrimeLawSystem.md  MountSystem.md  Oath_RPGSystems.md  __Oath.md
RawOath/DesignDocs/Systems/: System_NPCRelationships.md  System_ReligionDeity.md  System_SpellCrafting.md
RawOath/Generators/NPC/: Generator_NPC.h  Test_Generator_NPC.cpp
RawOath/Old/: System_DiseaseHealth.cpp  System_NPCRelationships.cpp  System_ReligionDeity.cpp
RawOath/OldStructure/Source/: System_EconomyMarket_JSON.cpp  System_ReligionDeity_JSON.cpp
RawOath/OldStructure/data/: Quests.json  ReligionDeity.json  World.json
RawOath/Source/: Oath_JSON.cpp  Oath_RPGSystems.cpp  Oath_RPGSystems.hpp  Oath_RPGSystems_JSON.cpp  Oath_RPGSystems_New.cpp  Oath_RPGSystems_New.hpp  System_SpellCrafting_JSON.cpp
RawOath/Source/Public/: Oath_RPGSystems_JSON.hpp
RawOath/Source/Systems/: System_AdvancedWeather.cpp  System_AdvancedWeather_JSON.cpp  System_CrimeLaw.cpp  System_CrimeLaw_JSON.cpp  System_DiseaseHealth.cpp  System_DiseaseHealth_JSON.cpp  System_EconomyMarket.cpp  System_EconomyMarket_JSON.cpp  System_FactionReputation_JSON.cpp  System_FactionReputation_JSON.hpp  System_Mount.cpp  System_Mount_JSON.cpp  System_NPCRelationships_JSON.cpp  System_ReligionDeity_JSON.cpp  System_ReligionDeity_JSON.hpp  System_SpellCrafting.cpp  System_SpellCrafting.hpp  System_SpellCrafting_JSON.cpp  TODO_System_NPCRelationships.cpp
RawOath/Systems/: System_DiseaseHealth.cpp  System_FactionReputation.cpp  System_Mount.cpp  System_ReligionDeity.cpp  System_SpellCrafting.cpp  System_SpellCrafting2.cpp
RawOath/data/: Crafting.json  DiseaseHealth.json  Skills.json  SpellCrafting.json
RawOath/oath/: CMakeLists.txt  main.cpp
RawOath/oath/core/: NodeID.cpp  NodeID.hpp  TAAction.hpp  TAController.cpp  TAController.hpp  TAInput.hpp  TANode.cpp  TANode.hpp  TATransitionRule.hpp
RawOath/oath/data/: CharacterStats.cpp  CharacterStats.hpp  GameContext.hpp  Inventory.cpp  Inventory.hpp  Item.cpp  Item.hpp  Recipe.cpp  Recipe.hpp  WorldState.cpp  WorldState.hpp
RawOath/oath/utils/: JSONLoader.cpp  JSONLoader.hpp  JSONSerializer.cpp  JSONSerializer.hpp
(+311 files in other folders)
